# xarray-tutorial

./: .buildinfo  .doctr-files  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .travis.yml  404.html  CNAME  CONTRIBUTING.html  CONTRIBUTING.md  README.md  _config.yml  _rediraffe_redirected.json  _toc.yml  conf.py  genindex.html  github_deploy_key_xarray_contrib_xarray_tutorial.enc  index.html  index.ipynb  index.rst  intro.html  intro.md  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  task.md  workshops.md  xarray_and_dask.html  xarray_and_dask.ipynb  xarray_for_data_analysis.html  xarray_for_data_analysis.ipynb  xarray_for_geoscientists.html  xarray_for_geoscientists.ipynb
.binder/: Welcome.md  apt.txt  environment.yml  jupyter_lab_config.py  jupyterlab-workspace.json  postBuild  start
.devcontainer/: Dockerfile  devcontainer.json  environment.yml  tasks.json
.devcontainer/scipy2023/: devcontainer.json  jupyter_lab_config.py  tasks.json
.devcontainer/scipy2024/: devcontainer.json  jupyter_lab_config.py
.devcontainer/scipy2025/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: deploy.yaml  main.yaml  nocache.yaml  preview.yaml  pull_request.yaml  qaqc.yaml  repo2docker.yaml  surge_preview.yml
.tests/: nbrun.py
DataTree/: DataTree_Tutorial.ipynb
_downloads/910d9eb3227def97a30b34cf79cffaf2/: conda-lock.yml
_sources/: CONTRIBUTING.md  intro.md  xarray_and_dask.ipynb.txt  xarray_for_data_analysis.ipynb.txt
_sources/data_cleaning/: ice_velocity.ipynb
_sources/fundamentals/: 01.1_creating_data_structures.ipynb  01.1_io.ipynb  01_data_structures.md  01_datastructures.ipynb  01_datastructures_and_io.ipynb  02.1_indexing_Basic.ipynb  02.1_working_with_labeled_data.ipynb  02.2_manipulating_dimensions.ipynb  02.3_aligning_data_objects.ipynb  03.1_computation_with_xarray.ipynb  03.2_groupby_with_xarray.ipynb  03.3_windowed.ipynb  04.1_basic_plotting.ipynb  04.2_faceting.ipynb  04.3_geographic_plotting.ipynb
_sources/oceanhackweek-2020/: xarray-oceanhackweek20.ipynb.txt
_sources/online-tutorial-series/: 03_computation.ipynb
_sources/overview/: get-started.md  learning-paths.md  xarray-in-45-min.ipynb
_sources/scipy-tutorial/: 00_overview.ipynb  00_overview.ipynb.txt  01_datastructures_and_io.ipynb  01_datastructures_and_io.ipynb.txt  02_working_with_labeled_data.ipynb.txt  03_computation_with_xarray.ipynb.txt  04_plotting_and_visualization.ipynb.txt  05_intro_to_dask.ipynb  05_intro_to_dask.ipynb.txt  06_xarray_and_dask.ipynb  06_xarray_and_dask.ipynb.txt
_sources/thinking-like-xarray/: README.md
_static/: announcement.css  exercise.css  style.css
advanced/: parallel-intro.html  parallel-intro.md  parallelize-custom-functions.html  parallelize-custom-functions.ipynb  why-trees.md  xarray_and_dask.html  xarray_and_dask.ipynb
advanced/accessors/: 01_accessor_examples.html  01_accessor_examples.ipynb  accessors.html  accessors.md
advanced/apply_ufunc/: apply_ufunc.html  apply_ufunc.md  automatic-vectorizing-numpy.html  automatic-vectorizing-numpy.ipynb  complex-output-numpy.html  complex-output-numpy.ipynb  core-dimensions.html  core-dimensions.ipynb  (+13 more)
binder/: environment.yml  postBuild  start
ci/: environment.yml
conda/: README.md  conda-lock.yml  environment-unpinned.yml  environment.yml
data/: sst.mnmean.nc
data_cleaning/: data_cleaning.html  data_cleaning.md  ice_velocity.html  ice_velocity.ipynb  ice_velocity_example.ipynb
fundamentals/: 00_overview.html  01.1_creating_data_structures.html  01.1_creating_data_structures.ipynb  01.1_io.html  01.1_io.ipynb  01_data_structures.html  01_data_structures.md  01_datastructures.html  01_datastructures.ipynb  01_datastructures_and_io.html  01_datastructures_and_io.ipynb  01_datatree_hierarchical_data.ipynb  01_datatree_imerghh.ipynb  02.1_indexing_Basic.html  02.1_indexing_Basic.ipynb  02.1_working_with_labeled_data.html  02.1_working_with_labeled_data.ipynb  02.2_indexing_Advanced.ipynb  02.2_manipulating_dimensions.html  02.2_manipulating_dimensions.ipynb  02.3_aligning_data_objects.html  02.3_aligning_data_objects.ipynb  02_indexing_Advanced.ipynb  02_indexing_Basic.ipynb  02_labeled_data.html  02_labeled_data.md  03.1_computation_with_xarray.html  03.1_computation_with_xarray.ipynb  03.2_groupby_with_xarray.html  03.2_groupby_with_xarray.ipynb  03.3_weighted.ipynb  03.3_windowed.html  03.3_windowed.ipynb  03.4_weighted.html  03.4_weighted.ipynb  03_computation.html  03_computation.md  04.0_plotting.html  04.0_plotting.md  04.1_basic_plotting.html  (+13 more)
notes/: handoff-why-an-index.md
oceanhackweek-2020/: README.html  README.md  xarray-oceanhackweek20.html  xarray-oceanhackweek20.ipynb
online-tutorial-series/: 01_xarray_fundamentals.html  01_xarray_fundamentals.ipynb  02_indexing.html  02_indexing.ipynb  03_computation.html  03_computation.ipynb  README.html  README.md
overview/: get-started.html  get-started.md  learning-paths.html  xarray-in-45-min.html  xarray-in-45-min.ipynb
reference/: acknowledgements.html  acknowledgements.md  bibliography.html  bibliography.md  glossary.html  glossary.md  references.bib  resources.html  resources.md
scipy-tutorial/: 00_overview.html  00_overview.ipynb  01. Introduction and data structures for multi-dimensional data.ipynb  01_Introduction.ipynb  01_Introduction_and_data_structures_for_multi-dimensional_data.ipynb  01_datastructures_and_io.html  01_datastructures_and_io.ipynb  02. Working with labeled data.ipynb  02_Data_structures.ipynb  02_working_with_labeled_data.html  02_working_with_labeled_data.ipynb  03_computation_with_xarray.html  03_computation_with_xarray.ipynb  04_plotting_and_visualization.html  04_plotting_and_visualization.ipynb  05_intro_to_dask.html  05_intro_to_dask.ipynb  06_xarray_and_dask.html  06_xarray_and_dask.ipynb  1.1_Introduction.ipynb  1.3_Roundtripping_and_io.ipynb  dask.html  dask.ipynb  xarray_and_plotting.html  xarray_and_plotting.ipynb
thinking-like-xarray/: 01-high-level-computation-patterns.html  01-high-level-computation-patterns.ipynb  README.html
(+69 files in other folders)
