[project]
name = "xarray-tutorial"
description = "Xarray Tutorial Website"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff.lint]
select = [
  "I", # isort
  "W", # pycodestyle warnings
  "B", # flake8-bugbear
  "F", # Pyflakes
  "E", # Pycodestyle
]
ignore = [
  "E203", # whitespace before '{symbol}'
  "E266", # too many leading '#' before block comment
  "E501", # line too long
  "E722", # do not use bare except
  "E402", # module level import not at top of file
  "E731", # do not assign a lambda expression, use a def
  # to remove fix eventually
  "F401", # unused import
  "F811", # redefinition of name
  "B006", # mutable argument defaults
  "B007", # unused loop control variable
  "B905", # zip without explicit strict parameter
]
fixable = ["I"]

[tool.codespell]
ignore-words-list = "nd"
skip = "pixi.lock,.pixi,qaqc.yaml,intermediate/indexing/why-an-index.ipynb"

[tool.pixi.workspace]
name = "xarray-tutorial"
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]
tutorial = "jupyter lab --LabApp.default_url='/lab/tree/overview/xarray-in-45-min.ipynb'"
build = "jupyter-book build ./ --warningiserror --keep-going"
precommit = "pre-commit run --all"
checklinks = "jupyter-book build ./ --builder linkcheck"
clear-cache = "jupyter-book clean ."
# To clear a specific notebook pass ID number: jcache cache -p _build/.jupyter_cache remove 28
# To clear all cached notebooks: jupyter-book clean . --all"
watch = { cmd = "jupyter-book config sphinx ./ && sphinx-autobuild ./ _build/html -b html --re-ignore '_build/.*'", description = "Build and serve with live reload" }
list-cache = "jcache cache -p _build/.jupyter_cache list"

[tool.pixi.dependencies]
jupyter-book = ">=1.0.4.post1,<2"
pre-commit = ">=4.6.0,<5"
dask-labextension = ">=7.0.0,<8"
jupyterlab = ">=4.6.1,<5"
jupyter_bokeh = ">=4.1.0,<5"
jupyterlab-myst = ">=2.7.0,<3"
jupyter-resource-usage = ">=1.2.1,<2"
cartopy = ">=0.25.0,<0.26"
cf_xarray = ">=0.11.3,<0.12"
dask = ">=2026.7.0,<2027"
datashader = ">=0.19.1,<0.20"
distributed = ">=2026.7.0,<2027"
gcsfs = ">=2026.7.0,<2027"
geoviews-core = ">=1.15.1,<2"
gsw = ">=3.6.23,<4"
hvplot = ">=0.12.2,<0.13"
h5netcdf = ">=1.8.1,<2"
ipykernel = ">=7.3.0,<8"
matplotlib-base = ">=3.11.0,<4"
netcdf4 = ">=1.7.4,<2"
numpy = ">=2.4.6,<3"
pint-xarray = ">=0.6.1,<0.7"
pydap = ">=3.5.10,<4"
python-graphviz = ">=0.21,<0.22"
pooch = ">=1.9.0,<2"
rioxarray = ">=0.22.0,<0.23"
scikit-learn = ">=1.9.0,<2"
scipy = ">=1.18.0,<2"
sphinx-codeautolink = ">=0.18.1,<0.19"
sphinxcontrib-mermaid = ">=2.0.3,<3"
sphinx-notfound-page = ">=1.1.0,<2"
sphinx-autobuild = ">=2025.8.25,<2026"
sphinxext-rediraffe = ">=0.3.0,<0.4"
s3fs = ">=2026.6.0,<2027"
xarray = ">=2026.7.0,<2027"
zarr = ">=3.2.1,<4"
flox = ">=0.11.2,<0.12"
numbagg = ">=0.9.4,<0.10"
rich = ">=15.0.0,<16"
imageio = ">=2.37.0,<3"
